Make ui adjustments

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,33 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+
+*{
+  font-family: 'Poppins', sans-serif;
+}
+p{
+  font-family: 'Roboto', sans-serif;
+}
+
+/* HTML: > */
+.loader {
+  width: fit-content;
+  font-size: 40px;
+  font-family: system-ui,sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #0000;
+  -webkit-text-stroke: 1px #000;
+  background: conic-gradient(#000 0 0) 0/0% 100% no-repeat text;
+  animation: l1 1s linear infinite;
+}
+.loader:before {
+  content: "Loading";
+}
+@keyframes l1 {
+  to{background-size: 120% 100%}
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
